--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -265,3 +265,61 @@
     box-shadow: none;
   }
 }
+
+.paragraph:not(:last-of-type) {
+  margin-bottom: 2rem;
+}
+
+.list {
+  margin: 3rem 0;
+  border-top: var(--line);
+  border-bottom: var(--line);
+  padding: 3rem 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  &__item {
+    flex: 0 0 50%;
+    margin-bottom: 0.7rem;
+  }
+
+  &__item::before {
+    content: "";
+    display: inline-block;
+    height: 1rem;
+    width: 1rem;
+    margin-right: 0.7rem;
+    // We Can't change the color of svg if styled using -> background-image property
+    // Older Browsers
+    // background-image: url(../img/chevron-thin-right.svg);
+    // background-size: cover;
+
+    // New Way
+    background-color: var(--color-primary);
+    -webkit-mask-image: url(../img/chevron-thin-right.svg);
+    -webkit-mask-size: cover;
+    // Uncomment if this functionality is already implemented in all browsers
+    // mask-image: url(../img/chevron-thin-right.svg);
+    // mask-size: cover;
+  }
+}
+
+.recommend {
+  display: flex;
+  align-items: center;
+  font-size: 1.3rem;
+  &__count {
+    margin-right: auto;
+    color: var(--color-grey-dark-3);
+  }
+  &__photo {
+    box-sizing: content-box;
+    height: 4rem;
+    width: 4rem;
+    border-radius: 50%;
+    border: 3px solid #fff;
+    &:not(:last-child) {
+      margin-right: -1.5rem;
+    }
+  }
+}
